applications/site-1.kingakati.com/web/overlays/staging/patch-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: site-vitrine-site-1-kingakati-com
  name: site-vitrine
  namespace: site-1-kingakati-com
spec:
  template:
    spec:
      containers:
      - image: erickmpene/site-vitrine:staging
        name: site-vitrine
        ports:
        - containerPort: 8080
