applications/site-1.kingakati.com/web/overlays/staging/patch-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: site-1-kingakati-com-ingress
  namespace: site-1-kingakati-com
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/issuer: site-1.kingakati.com-issuer
spec:
  tls:
    - hosts:
        - staging.site-1.kingakati.com
      secretName: site-1.kingakati.com-staging-tls-secret
  rules:
    - host: staging.site-1.kingakati.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: site-1-kingakati-com
                port:
                  number: 80
